<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:visible="false">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>
    <item
        android:id="@+id/nav_device"
        android:title="@string/device">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_phone_storage"
                    android:icon="@drawable/ic_phone_storage"
                    android:title="@string/phone_storage" />
                <item
                    android:id="@+id/nav_sdcard"
                    android:icon="@drawable/ic_sdcard"
                    android:title="@string/sdcard" />
            </group>
        </menu>
    </item>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_installed_apps"
                android:icon="@drawable/ic_apps_black_24dp"
                android:title="@string/installed_apps" />
        </menu>
    </item>

    <item android:title="@string/feedback">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"
                android:visible="false" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_mail_24dp"
                android:title="@string/send_email" />
        </menu>
    </item>

    <group>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_action_setting"
            android:title="@string/settings" />
    </group>
</menu>
