<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_create_new_folder"
        android:icon="@drawable/ic_add"
        android:title="@string/create_new_folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_sort_by_time"
                android:title="@string/sort_by_time"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_sort_by_size"
                android:title="@string/sort_by_size"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
